[package]
name = "parser"
version = "0.1.0"
authors = ["Rob Jenks <robjenks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

itertools = "0.8.2"
log = "0.4.8"
env_logger = "0.7.1"
